# crowndesk-ai-service

./: .env.example  AI_AGENT_AUTHENTICATION.md  DEPLOYMENT.md  Dockerfile  ELEVENLABS_SETUP.md  ELEVENLABS_WEBHOOKS.json  QUICK_START_WEBHOOKS.md  README.md  WEBHOOK_SETUP_GUIDE.md  fly.toml  pyproject.toml  set-fly-secrets-ai.ps1  set-fly-secrets.ps1  start-service.ps1
.github/workflows/: deploy.yml
api/: index.py
docs/: AGENT_MANAGEMENT_PHASE3_COMPLETE.md  AI_AGENT_MANAGEMENT_COMPREHENSIVE_SPEC.md  AI_IMPLEMENTATION_COMPLETE.md
scripts/: setup-venv.ps1
src/ai_service/: __init__.py  config.py  main.py
src/ai_service/routers/: __init__.py  coding.py  feedback.py  health.py  intent.py  rag.py  retell.py  voice_agent.py
src/ai_service/services/: __init__.py  ai_orchestrator.py  coding_service.py  guardrails.py  intent_service.py  prompts.py  rag_service.py  retell_service.py
