# CrownDesk V2 - AI Service
# Per plan.txt Section 12-13: AI-Assisted Dental Coding & RAG Pipeline

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crowndesk-ai-service"
version = "0.1.0"
description = "CrownDesk V2 AI Service - RAG, dental coding, intent classification"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Database & Vector Store
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.25",
    "pgvector>=0.2.4",
    
    # AI/ML
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.3",
    "langchain-community>=0.0.15",
    "tiktoken>=0.5.2",
    
    # WebSocket
    "websockets>=12.0",
    
    # Document Processing
    "pypdf>=3.17.4",
    "python-docx>=1.1.0",
    "unstructured>=0.12.0",
    
    # AWS
    "boto3>=1.34.0",
    
    # Utilities
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "ruff>=0.1.11",
    "mypy>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_service"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
